<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.viewpager.widget.ViewPager
        android:id="@+id/resultViewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="12"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >
        <Button
        android:id="@+id/preResultButton"
        android:text="@string/previous"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_margin="2dp"
        android:background="@drawable/round"/>

        <Button
            android:id="@+id/backResultButton"
            android:text="@string/exit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:background="@drawable/round"/>

        <Button
            android:id="@+id/nextResultButton"
            android:text="@string/next"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:background="@drawable/round"/>

    </LinearLayout>

</LinearLayout>